# internal/admin/api/oas_request_encoders_gen.go
@@ -136,8 +136,8 @@ func encodeForgetRunRequest(
 	return nil
 }
 
-func encodeLLMAssignmentsUpdateRequest(
-	req *LLMAssignmentsUpdateReq,
+func encodeLLMModelsCreateRequest(
+	req *LLMModel,
 	r *http.Request,
 ) error {
 	const contentType = "application/json"
@@ -150,44 +150,14 @@ func encodeLLMAssignmentsUpdateRequest(
 	return nil
 }
 
-func encodeLLMPresetsCreateRequest(
-	req *LLMPreset,
+func encodeLLMRolesUpdateRequest(
+	req *LLMRoleUpdateReq,
 	r *http.Request,
 ) error {
 	const contentType = "application/json"
 	e := new(jx.Encoder)
 	{
 		req.Encode(e)
-	}
-	encoded := e.Bytes()
-	ht.SetBody(r, bytes.NewReader(encoded), contentType)
-	return nil
-}
-
-func encodeLLMPresetsUpdateRequest(
-	req *LLMPreset,
-	r *http.Request,
-) error {
-	const contentType = "application/json"
-	e := new(jx.Encoder)
-	{
-		req.Encode(e)
-	}
-	encoded := e.Bytes()
-	ht.SetBody(r, bytes.NewReader(encoded), contentType)
-	return nil
-}
-
-func encodeLLMUpdateRequest(
-	req jx.Raw,
-	r *http.Request,
-) error {
-	const contentType = "application/json"
-	e := new(jx.Encoder)
-	{
-		if len(req) != 0 {
-			e.Raw(req)
-		}
 	}
 	encoded := e.Bytes()
 	ht.SetBody(r, bytes.NewReader(encoded), contentType)
